fix (Range) remove z-index

--- a/src/components/Ranger/RangeSlider.scss
+++ b/src/components/Ranger/RangeSlider.scss
@@ -3,7 +3,7 @@
 .container {
   position: relative;
   padding: 1px;
-  z-index: 3;
+  // z-index: 3;
 }
 
 .range-slider {
